# paula

./: .buildinfo  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  build-wheels.sh  check.sh  environment.yml  genindex.html  index.html  modules.html  objects.inv  paula.html  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.ci/: build-wheels.sh  macos-install-python.sh
.github/workflows/: main.yml  pythonpublish.yml
_sources/: paula.rst.txt
docs/: Makefile  buildDocs.sh  make.bat
docs/source/: conf.py  modules.rst
paula/: __init__.py
src/: bindings.cpp  main.cpp
src/paula/: __init__.py
src/paula/celia/: CMakeLists.txt
src/paula/celia/include/: hello.h
src/paula/celia/src/: hello.cpp  main.cpp
tests/: test_extension.py  test_extension_array.py  test_extension_class.py  test_extension_openmp.py  test_paula.py
